# practicas-calculo-matricial-estructuras

./: .gitignore  CMakeLists.txt  README.md  eigen_indexing.h  ejemplo_cpp.cpp  libcalculomatricial.cpp  libcalculomatricial.h  practica1.cpp
matlab/: ejemplo1.m  matriz_barra_art_art.m  matriz_barra_rig_rig.m  matriz_rotacion2.m  matriz_rotacion3.m
